--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -32,6 +32,10 @@
         <servlet-name>CitasServlet</servlet-name>
         <servlet-class>Controlador.CitasServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>QuejasServlet</servlet-name>
+        <servlet-class>Controlador.QuejasServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>IniServlet</servlet-name>
         <url-pattern>/IniServlet</url-pattern>
@@ -63,6 +67,10 @@
     <servlet-mapping>
         <servlet-name>CitasServlet</servlet-name>
         <url-pattern>/CitasServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>QuejasServlet</servlet-name>
+        <url-pattern>/QuejasServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
